footer layout complete, fixing alignment now

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,26 +1,63 @@
 footer {
   background-color: var(--light-color);
   font-size: var(--body-font-size-xs);
+  border-top: 5px solid #1a5336;
 }
 
-footer .footer > div {
-  margin: auto;
-  max-width: 1200px;
-  padding: 40px 24px 24px;
+.footer-banner-container{
+  display: flex;
+  flex-wrap: wrap;
 }
 
-footer .footer p {
-  margin: 0;
+.footer-banner img{
+  width: 400px;
+  height: auto;
 }
 
-@media (width >= 900px) {
-  footer .footer > div {
-    padding: 40px 32px 24px;
-  }
+.footer-content{
+  text-align: center;
+  margin-top: 140px;
+}
+
+.footer-content-container{
+  max-width: 100%;
+  justify-content: center;
+}
+
+.footer-content > div:last-child > div{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-content > div:nth-child(1){
+  font-size: 22px;
+}
+
+.footer-content > div:nth-child(1) > div > p > strong{
+  color:#058203;
+}
+
+.footer-content > div:nth-child(2){
+  font-size: 15px;
+}
+
+.footer-content > div:last-child > div img{
+  width: 20px;
+  height: auto;
+  margin-right: 25px;
+  border-radius: 50%;
+  border: 1px solid #058203; 
+  padding: 10px;
 }
 
 .footer-links > div:first-child > div{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 30px;
+  max-width: 100%;
+  padding-bottom: 48px;
 }
+
